Calculating total number of errors and showing in table head

--- a/src/template.html
+++ b/src/template.html
@@ -904,7 +904,7 @@
         <section aria-label="Results" class="col" >
             <table style="width:50%">
                 <thead>
-                <tr><th>Sent</th><th>Received</th><th>Errors</th></tr>
+                <tr><th>Sent</th><th>Received</th><th>Errors</th><th><span data-bind="text: totalErrors"/></th></tr>
                 </thead>
                 <tbody data-bind="foreach: gradeResults">
                 <tr>
